added "favorite countries" feature, improved views, added validation

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,9 @@
 </head>
 <body>
 
-
+        <nav id = "navBar"></nav>
     <div id="container">
-            <h1>Countries</h1>
-       
+            <h1>Find your country </h1>
         <div id="searchDiv"></div>
         <div id="country-list"></div>
     </div>
