added routing, merged countries and favorite countries views

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Countries App</title>
-   
     <!-- <link rel="stylesheet" href="css/old.css"> -->
     <link rel="stylesheet/less" type="text/css" href="css/styles.less" />
     <script  src="js/libs/less-min.js" ></script>
+    <style>
+       
+            body { 
+                background: url(images/back.jpg) no-repeat center center fixed; 
+                -webkit-background-size: cover;
+                -moz-background-size: cover;
+                -o-background-size: cover;
+                background-size: cover;
+            }
+        
+    </style>
 </head>
 <body>
 
-        <nav id = "navBar"></nav>
+    <nav id = "navBar"></nav>
     <div id="container">
-            <h1>Find your country </h1>
+        <h1>Find your country </h1>
         <div id="searchDiv"></div>
         <div id="country-list"></div>
     </div>
